--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <div class="title-bar-text">AlephNote</div>
       </div>
       <div class="window-body">
+       <ul role="menubar">
+          <li role="menuitem" tabindex="0">File</li>
+          <li role="menuitem" tabindex="0">Edit</li>
+          <li role="menuitem" tabindex="0">Help</li>
+         </ul>
         <p>Hello, world!</p>
       </div>
     </div>
